Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 </li>
 <li>Threading Support (prevent ST lockups)</li>
 <li>Query timeout (Kill thread if query takes too long)</li>
-<li>Unescape chars for languages (PHP \\" is replace by \")</li>
+<li>Unescape chars for languages (PHP \" is replace by ")</li>
+<li>Save queries (<code>CTRL+e, CTRL+q</code>)</li>
+<li>List and Run saved queries (<code>CTRL+e, CTRL+a</code>)</li>
+<li>Remove saved queries (<code>CTRL+e, CTRL+r</code>)</li>
 </ul>
 
 <h2>
@@ -60,9 +63,6 @@
 <p>Up coming features:</p>
 
 <ul>
-<li>[ ] Save queries</li>
-<li>[ ] Get saved queries</li>
-<li>[ ] Run saved queries</li>
 <li>[ ] Auto complete for Oracle and Vertica</li>
 </ul>
 
