--- a/index.html
+++ b/index.html
@@ -368,6 +368,16 @@
     </code>
     </pre>
 
+    <div>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:320px;height:100px"
+             data-ad-client="ca-pub-8784678614220981"
+             data-ad-slot="5186768154"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
           <footer class="site-footer">
             <span class="site-footer-owner"><a href="https://github.com/mtxr/SQLTools">SQLTools</a> is maintained by <a href="https://github.com/mtxr">mtxr</a>.</span>
 
@@ -405,13 +415,5 @@
     });
     </script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:320px;height:100px"
-         data-ad-client="ca-pub-8784678614220981"
-         data-ad-slot="5186768154"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
   </body>
 </html>
