--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </li>
     <li>Threading Support (prevent ST lockups)</li>
     <li>Query timeout (Kill thread if query takes too long)</li>
-    <li>Unescape chars for languages (PHP \" is replace by ")</li>
+    <li>Unescape chars for languages (PHP <code>\"</code> is replace by <code>"</code>)</li>
     <li>Save queries (<code>CTRL+e, CTRL+q</code>)</li>
     <li>List and Run saved queries (<code>CTRL+e, CTRL+a</code>)</li>
     <li>Remove saved queries (<code>CTRL+e, CTRL+r</code>)</li>
@@ -109,7 +109,7 @@
     <ol>
     <li>Press <code>CTRL+SHIFT+p</code>
     </li>
-    <li>Type <em>"Install Package"</em> </li>
+    <li>Type <code>"Install Package"</code> </li>
     <li>Find SQLTools</li>
     <li>Wait &amp; Done!</li>
     </ol>
@@ -306,7 +306,9 @@
     <h2>
     <a id="connections" class="anchor" href="#connections" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Connections</h2>
 
-    <p>SQLToolConnections.sublime-settings example:</p>
+    <p>You can setup your connecitons using the <code>Preferences</code> menu or <code>CTRL+SHIFT+P</code> and searching for <code>ST: Setup Connections</code>.</p>
+
+    </p>Below you can see an example of the <code>SQLToolsConnections.sublime-settings</code>:</p>
 
     <pre><code class="json">
 {
@@ -352,7 +354,7 @@
 
     <ol>
     <li>
-    <code>CTRL+SHIFT+p</code>, select "<em>Preferences: Settings - User</em>"</li>
+    <code>CTRL+SHIFT+p</code>, select <code>Preferences: Settings - User</code></li>
     <li>add this option: </li>
     </ol>
 
@@ -367,17 +369,6 @@
 }
     </code>
     </pre>
-
-    <div>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <ins class="adsbygoogle"
-             style="display:inline-block;width:320px;height:100px"
-             data-ad-client="ca-pub-8784678614220981"
-             data-ad-slot="5186768154"></ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
           <footer class="site-footer">
             <span class="site-footer-owner"><a href="https://github.com/mtxr/SQLTools">SQLTools</a> is maintained by <a href="https://github.com/mtxr">mtxr</a>.</span>
 
