--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         </ul>
       </header>
       <section>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8784678614220981",
+    enable_page_level_ads: true
+  });
+</script>
+      </section>
+      <section>
         <h1>
 <a id="-sqltools" class="anchor" href="#-sqltools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://github.com/mtxr/SQLTools/raw/images/icon.png?raw=true" alt="SQLTools"> SQLTools</h1>
 
