Add new safe_limit, show_query and extend_to_paragraph options

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
 
 <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=RSMB6DGK238V8" title="Donate to this project using Paypal"><img src="https://img.shields.io/badge/paypal-donate-yellow.svg" alt="PayPal donate button"></a></p>
 
+<h2>Contributors</h2>
+<p>These fellows helped SQLTools become better than ever. Thank you so much!</p>
+<p>
+<ul>
+<li><a href="https://github.com/tkopets">@tkopets</a></li>
+<li><a href="https://github.com/gabrielebarbieri">@gabrielebarbieri</a></li>
+<li><a href="https://github.com/optio">@optio</a></li>
+</ul>
+</p>
+
+
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
@@ -360,6 +371,6 @@
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
 </html>
