Updated object to int in description for safe_limit

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 <td><code>safe_limit</code></td>
 <td align="left">Optionally set a default LIMIT on queries. Parameter can be an INT or false.</a>
 </td>
-<td><code>object</code></td>
-<td><code>{"safe_limit": false}</code></td>
+<td><code>int</code></td>
+<td><code>false</code></td>
 </tr>
 <tr>
 <td><code>show_query</code></td>
